[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rna_strand_storage"
version = "0.0.0.1"
description = "Save rna data at time of generation and share via common Python API"
readme = "README.md"
authors = [{ name = "Jennifer Pearl", email = "jenpearl5@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">3.9.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]